# MathGeoLib

./: .gitignore  CMakeLists.txt  CommonOptions.cmake  MathGeoLibConfig.cmake.in  MathGeoLibConfigVersion.cmake.in  README  emcc_toolchain.cmake
.circleci/: config.yml
clang/: clang-cmake-asmlisting-release-avx.bat  extract-code-avx.bat
cppcheck/: run_cppcheck.bat  suppressions.txt
doc/: Doxyfile  GenerateDocs.bat  GenerateDocsSkipDoxygenRun.bat  docstructure.xml  docstructure_tests.xml  extractcode.py  rundoxygen.bat
doc/static/: addcomment.php  alternatives.html  captcha.php  comments.php  index.html  onlinechannels.html  reference.html  sourcecode.html  style.css  usermanual.html
doc/static/docs/: style.css
emcc/: build_emcc.bat  cmake_emcc.bat  emcc_cmake.bat  emcc_cmake_debug-tests-html.sh  emcc_cmake_debug-tests-js.sh  emcc_cmake_debug.bat  emcc_cmake_debug_tests.bat  emcc_cmake_release-tests-html.bat  emcc_cmake_release-tests-js.sh  emcc_cmake_release.bat  run_and_capture_file.py
flascc/: build.bat  cmake_release.bat
ios/: iOS-toolchain.cmake  ios_xcode_cmake.bash
linux/: cmake_debug-tests.bash  cmake_debug.bash  cmake_release-tests.bash  cmake_release.bash  valgrind-suppressions.txt
mingw/: DeleteCppSuffix.bat  extract-code-avx.bat  mingw-cmake-asmlisting-release-avx.bat  mingw-cmake-codecoverage-tests-debug.bat  mingw-cmake-debug.bat  mingw-cmake-release-avx.bat  mingw-cmake-release.bat  mingw-cmake-tests-debug.bat  mingw-cmake-tests-release.bat  mingw-cmake-tests.bat  mingw-cmake.bat  mingw-make-clean.bat  mingw-make.bat  mingw-run-tests.bat
msvc/: MathGeoLib.sln  MathGeoLib.vcxproj
nacl/: nacl_toolchain.cmake
osx/: xcode_cmake.bash
osx_make/: osx_make_cmake.bash  osx_make_cmake_debug-tests.bash  osx_make_cmake_debug.bash  osx_make_cmake_release-tests.bash  osx_make_cmake_release.bash
osx_xcode/: osx_xcode_cmake-tests-avx.bash  osx_xcode_cmake-tests.bash  osx_xcode_cmake.bash
src/: Log.cpp  Log.h  MathBuildConfig.h  MathGeoLib.h  MathGeoLibFwd.h  Types.h  assume.h  myassert.h
src/Algorithm/: GJK.cpp  GJK.h  GJK2D.cpp  GJK2D.h  SAT.cpp  SAT.h
src/Algorithm/Random/: LCG.cpp  LCG.h
src/Geometry/: AABB.cpp  AABB.h  AABB2D.h  Capsule.cpp  Capsule.h  Circle.cpp  Circle.h  Circle2D.cpp  Circle2D.h  Cone.h  Cylinder.h  Ellipsoid.h  Frustum.cpp  Frustum.h  GeomType.h  GeometryAll.h  HitInfo.h  KDTree.h  KDTree.inl  Line.cpp  Line.h  LineSegment.cpp  LineSegment.h  LineSegment2D.cpp  LineSegment2D.h  OBB.cpp  OBB.h  OBB2D.h  PBVolume.cpp  PBVolume.h  Plane.cpp  Plane.h  Polygon.cpp  Polygon.h  Polygon2DRef.h  Polyhedron.cpp  Polyhedron.h  QuadTree.h  QuadTree.inl  Ray.cpp  (+12 more)
src/Math/: BitFuncs.h  BitOps.cpp  BitOps.h  Callstack.cpp  Callstack.h  Complex.h  CoordinateAxisConvention.h  FixedPoint.h  FloatCmp.h  InclWindows.h  Interpolate.h  MathAll.h  MathBuildConfig.h  MathConstants.h  MathFunc.cpp  MathFunc.h  MathFwd.h  MathLog.cpp  MathLog.h  MathNamespace.h  MathOps.cpp  MathTypes.h  Matrix.inl  MatrixProxy.h  MiniFloat.cpp  MiniFloat.h  MultiLineMacro.h  Polynomial.cpp  Polynomial.h  Quat.cpp  Quat.h  Rect.h  Reinterpret.h  SSEMath.cpp  SSEMath.h  SSEMathConfig.h  Swap.h  TransformOps.cpp  TransformOps.h  assume.h  (+29 more)
src/Time/: Clock.cpp  Clock.h  UnixClock.cpp  W32Clock.cpp
src/emscripten/: library_system.h  library_system.js
tests/: AABBTests.cpp  CallstackTests.cpp  Circle2DTests.cpp  ClockTests.cpp  ConversionTests.cpp  DegenerateTests.cpp  EncloseTests.cpp  Float4dTests.cpp  FrustumTests.cpp  GJKTests.cpp  JSONReport.h  KdTreeTests.cpp  LCGTests.cpp  LineTests.cpp  MathFuncTests.cpp  MathGeoLibTests.cpp  MathGeoLibTests.h  MatrixTests.cpp  MemcpyTests.cpp  NEONTests.cpp  NegativeTests.cpp  OBBTests.cpp  ObjectGenerators.h  PBVolumeTests.cpp  PolygonTests.cpp  PolyhedronTests.cpp  PositiveTests.cpp  QuatTests.cpp  SAT2DTests.cpp  SSEMathTests.cpp  SerializationTests.cpp  SphereTests.cpp  SystemInfo.cpp  SystemInfo.h  SystemInfoIos.m  SystemInfoTests.cpp  TestAABB.cpp  TestData.cpp  TestData.h  TestRunner.cpp  (+5 more)
unix/: unix_cmake.bash  unix_cmake_debug-tests.bash  unix_cmake_debug.bash  unix_cmake_release.bash
vs2010-32bit/: vs2010-cmake-avx-tests.bat  vs2010-cmake-sse-tests.bat  vs2010-cmake-sse2-tests.bat  vs2010-cmake-sse41-tests.bat  vs2010-cmake-tests.bat  vs2010-cmake.bat
vs2010-64bit/: vs2010-cmake-avx-tests.bat  vs2010-cmake-tests.bat  vs2010-cmake.bat
vs2012-32bit/: vs2012-cmake-analyze-tests.bat  vs2012-cmake-analyze.bat  vs2012-cmake-sse41-analyze-tests.bat  vs2012-cmake-sse41-tests.bat  vs2012-cmake.bat
vs2012-64bit/: vs2012-cmake-analyze-tests.bat  vs2012-cmake-analyze.bat  vs2012-cmake-tests.bat  vs2012-cmake.bat
vs2013-64bit/: vs2013-cmake-avx-tests.bat  vs2013-cmake-sse41-analyze-tests.bat  vs2013-cmake-sse41-tests.bat  vs2013-cmake-tests.bat
vs2015-64bit/: vs2015-cmake-fma3-avx-tests.bat
vs2017-64bit/: vs2017-cmake-fma3-avx-tests.bat
